--- a/hw/consensus3.ipynb
+++ b/hw/consensus3.ipynb
@@ -213,9 +213,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "670",
+   "display_name": "Team",
    "language": "python",
-   "name": "venv"
+   "name": "team"
   },
   "language_info": {
    "codemirror_mode": {
