--- a/Labs/Lab3/swarms.ipynb
+++ b/Labs/Lab3/swarms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1116,9 +1116,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Team",
    "language": "python",
-   "name": "python3"
+   "name": "team"
   },
   "language_info": {
    "codemirror_mode": {
