added angle rotation

--- a/Labs/Lab3/swarms.ipynb
+++ b/Labs/Lab3/swarms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,14 +125,19 @@
     "    return target_angles\n",
     "\n",
     "def rotate(x_angles, t_angles, turning_rate):\n",
+    "    # Turning rate: turning rate * tau (timestep) - can we scale this to be from 0 to 1?\n",
     "    for i in range(x_angles.shape[0]):\n",
+    "        \n",
+    "        # angle from direction to target direction\n",
     "        angle = np.arccos(np.dot(x_angles[i], t_angles[i]) / \n",
     "                          (np.linalg.norm(x_angles[i]) * np.linalg.norm(t_angles[i])))\n",
     "        if angle < turning_rate:\n",
     "            x_angles[i] = t_angles[i]\n",
-    "        else:\n",
-    "            # TODO: Turn in direction of target_angle\n",
-    "            x_angles[i] = t_angles[i]\n",
+    "        elif angle >= turning_rate:\n",
+    "            # Turn in direction of target_angle\n",
+    "            convex_rate = turning_rate/abs(angle) # always between 0 and 1\n",
+    "            # Take a weighted average\n",
+    "            x_angles[i] = x_angles[i] * (1-convex_rate) + target_angles[i] * (convex_rate)\n",
     "    return x_angles\n",
     "\n",
     "def move_agents(x, x_angles, velocity):\n",
@@ -1122,9 +1127,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Team",
    "language": "python",
-   "name": "python3"
+   "name": "team"
   },
   "language_info": {
    "codemirror_mode": {
