--- a/Labs/Lab3/wes.ipynb
+++ b/Labs/Lab3/wes.ipynb
@@ -1095,9 +1095,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "cs670",
    "language": "python",
-   "name": "python3"
+   "name": "cs670"
   },
   "language_info": {
    "codemirror_mode": {
