--- a/Labs/Lab3/swarms.ipynb
+++ b/Labs/Lab3/swarms.ipynb
@@ -1117,9 +1117,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Team",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "team"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
