--- a/Labs/Lab3/swarms_TA.ipynb
+++ b/Labs/Lab3/swarms_TA.ipynb
@@ -114,6 +114,8 @@
     "                \n",
     "            nn_idx = sorted_idx[point_idx, nn]\n",
     "            dist = D[point_idx, nn_idx]\n",
+    "            if point_idx==1:\n",
+    "                print(dist)\n",
     "            # Each neighbor is only considered to be in one zone\n",
     "            if is_visible(x, x_angles, point_idx, nn_idx, fop):\n",
     "                if dist < r_r:\n",
